# desktop

./: CLAUDE.md  README.md  package-lock.json  package.json  todo.md
.github/workflows/: release-desktop.yml
crates/wry/src/: lib.rs
crates/wry/src/webview2/: mod.rs
hook-dll/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands_core.rs  desktop_clone.rs  discord.rs  lib.rs  main.rs  system_monitor.rs  tray.rs  window_layer.rs
