[package]
name = "mywallpaper-desktop"
version = "1.0.10"
description = "MyWallpaper Desktop - Animated Wallpaper Application"
authors = ["MyWallpaper Team"]
license = "MIT"
repository = "https://github.com/MyWallpapers/desktop"
edition = "2021"

[lib]
name = "mywallpaper_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-single-instance = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
os_info = "3"
typeshare = "1.0"
base64 = "0.22"
dirs = "5"
ureq = "2"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem"
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
