[package]
name = "mywallpaper-desktop"
version = "1.0.58"
description = "MyWallpaper Desktop - Animated Wallpaper Application"
authors = ["MyWallpaper Team"]
license = "MIT"
repository = "https://github.com/MyWallpapers/app"
edition = "2021"

[lib]
name = "mywallpaper_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"
tauri-plugin-autostart = "2.0"
tauri-plugin-deep-link = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-single-instance = "2.0"
tauri-plugin-log = { version = "2.0", features = ["colored"] }
url = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
os_info = "3"
typeshare = "1.0"

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_Variant",
    "Win32_System_Com",
]

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
devtools = ["tauri/devtools"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
